--- a/app/src/main/res/layout/info.xml
+++ b/app/src/main/res/layout/info.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imageView"
         android:layout_width="101dp"
         android:layout_height="141dp"
-        app:srcCompat="@drawable/user" />
+        app:srcCompat="@drawable/setting" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -18,12 +18,13 @@
         android:orientation="horizontal">
 
         <TextView
-            android:fontFamily="@font/bm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="30dp"
+            android:fontFamily="@font/bm"
             android:text="이름 : "
+            android:textColor="#FFD1FE"
             android:textSize="20dp" />
 
         <TextView
@@ -49,6 +50,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="30dp"
             android:text="학과 : "
+            android:textColor="#FFD1FE"
             android:textSize="20dp" />
 
         <TextView
@@ -75,6 +77,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="30dp"
             android:text="학년 : "
+            android:textColor="#FFD1FE"
             android:textSize="20dp" />
 
         <TextView
@@ -100,6 +103,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="30dp"
             android:text="관심분야 : "
+            android:textColor="#FFD1FE"
             android:textSize="20dp" />
 
         <TextView
@@ -119,12 +123,13 @@
         android:orientation="horizontal">
 
         <TextView
-            android:fontFamily="@font/bm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="30dp"
+            android:fontFamily="@font/bm"
             android:text="희망 시간대 : "
+            android:textColor="#FF92D7"
             android:textSize="20dp" />
 
         <TextView
@@ -150,6 +155,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginTop="30dp"
             android:text="희망 장소 : "
+            android:textColor="#FFD1FE"
             android:textSize="20dp" />
 
         <TextView
