--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -18,7 +18,7 @@
                 android:id="@+id/profile_imageview"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/user"
+                android:src="@drawable/border2"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="20dp"/>
 
