--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -19,7 +19,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginHorizontal="90dp"
-            android:src="@drawable/school" />
+            android:src="@drawable/border2" />
 
         <EditText
             android:id="@+id/text_school"
@@ -36,7 +36,7 @@
             android:layout_below="@+id/icon_school"
             android:layout_marginHorizontal="90dp"
             android:layout_marginTop="20dp"
-            android:src="@drawable/user" />
+            android:src="@drawable/border3" />
 
         <EditText
             android:id="@+id/text_user"
@@ -55,7 +55,7 @@
             android:layout_below="@+id/icon_user"
             android:layout_marginHorizontal="90dp"
             android:layout_marginTop="20dp"
-            android:src="@android:drawable/ic_menu_search" />
+            android:src="@drawable/border" />
 
         <EditText
             android:id="@+id/text_password"
