--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -13,35 +13,38 @@
 
         <Button
             android:id="@+id/infoBtn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="53dp"
+            android:layout_height="59dp"
             android:layout_marginLeft="20dp"
-            android:background="@drawable/user"
-            android:backgroundTint="@color/black" />
+            android:layout_margintop="10dp"
+            android:background="@drawable/my" />
+
         <Button
             android:id="@+id/SettingBtn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/settings"
-            android:layout_marginLeft="10dp"/>
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+
+
+            android:background="@drawable/setting" />
 
 
         <TextView
-            android:fontFamily="@font/nanum"
-            android:textStyle="bold"
             android:layout_width="140dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
+            android:fontFamily="@font/nanum"
             android:text="SMASH"
-            android:textSize="40dp" />
+            android:textColor="#FF96F1"
+            android:textSize="40dp"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/logoutBtn"
             android:layout_width="69dp"
             android:layout_height="78dp"
             android:layout_gravity="bottom"
-            android:layout_marginLeft="80dp"
+            android:layout_marginLeft="50dp"
             android:background="@drawable/onoff" />
     </LinearLayout>
 
@@ -54,8 +57,8 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:background="@android:drawable/ic_menu_search" />
+            android:layout_marginTop="15dp"
+            android:background="@drawable/serch" />
         <EditText
             android:layout_width="250dp"
             android:layout_height="40dp"
@@ -65,7 +68,7 @@
             android:id="@+id/makeRoomBtn"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background="@drawable/add"
+            android:background="@drawable/new_add"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="20dp"/>
 
