--- a/app/src/main/res/layout/notice.xml
+++ b/app/src/main/res/layout/notice.xml
@@ -14,31 +14,27 @@
             android:id="@+id/noticeBack"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background="@drawable/back"
+            android:background="@drawable/back2"
             android:layout_marginTop="10dp"/>
+
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="280dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="25dp"
+            android:fontFamily="@font/bm"
+            android:gravity="center"
             android:text="컴퓨터알고리즘 스터디방"
             android:textColor="#FFB345"
-            android:fontFamily="@font/bm"
-            android:textSize="20dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center"/>
+            android:textSize="22dp" />
         <Button
             android:id="@+id/noticeOnOff"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background="@drawable/on_off_button"
-            android:layout_marginLeft="40dp"
+            android:background="@drawable/onoff"
+            android:layout_marginLeft="0dp"
             android:layout_marginTop="10dp"/>
     </LinearLayout>
-
-
-
-
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -86,9 +82,9 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="right"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="20dp"
-        android:background="@drawable/add" />
+        android:background="@drawable/add2" />
 
 
 
