--- a/app/src/main/res/layout/notice_chat.xml
+++ b/app/src/main/res/layout/notice_chat.xml
@@ -11,11 +11,12 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/Back"
+            android:id="@+id/Backbutton"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginLeft="10dp"
-            android:background="@drawable/back" />
+            android:layout_marginTop="10dp"
+            android:background="@drawable/back2" />
 
         <TextView
             android:layout_width="250dp"
@@ -27,56 +28,73 @@
             android:textColor="#FFE4D4"
             android:textSize="40dp" />
 
+        <Button
+            android:id="@+id/makeNoticeLogout"
+            android:layout_width="61dp"
+            android:layout_height="62dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/onoff" />
+
     </LinearLayout>
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_marginLeft="10dp"
-            android:fontFamily="@font/bm"
-            android:text="제목"
-            android:textColor="#ED8876"
-            android:textSize="40dp" />
-
-    <EditText
-        android:layout_height="50dp"
-        android:layout_width="200dp"
-        android:layout_marginLeft="10dp"
-        android:id="@+id/Title"
-        android:textSize="40dp"
-        android:layout_marginTop="20dp"/>
-
-</LinearLayout>
-
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:fontFamily="@font/bm"
-        android:text="내용"
-        android:textColor="#FFD9D9"
-        android:textSize="40dp" />
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:background="@drawable/border3"
-        android:gravity="center|center_horizontal"
-        android:hint="내용을 작성하세요"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:layout_marginLeft="10dp"
+                    android:fontFamily="@font/bm"
+                    android:text="제목"
+                    android:textColor="#ED8876"
+                    android:textSize="40dp" />
 
-        android:textColorHint="#8E8E8E" />
+                <EditText
+                    android:layout_height="50dp"
+                    android:layout_width="200dp"
+                    android:layout_marginLeft="10dp"
+                    android:id="@+id/Title"
+                    android:textSize="40dp"
+                    android:layout_marginTop="20dp"/>
 
-    <Button
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="올리기"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/border3_1"/>
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/bm"
+                android:text="내용"
+                android:textColor="#FFD9D9"
+                android:textSize="40dp" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:background="@drawable/border3"
+                android:gravity="center|center_horizontal"
+                android:hint="내용을 작성하세요"
+
+                android:textColorHint="#8E8E8E" />
+
+            <Button
+                android:id="@+id/uploadBtn"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="올리기"
+                android:layout_marginLeft="150dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/border3_1"/>
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
